// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderTest render header: new assessment experience disabled 1`] = `
"<header className=\\"header-bar\\">
  <class_1 deps={{...}} />
  <div className=\\"ms-font-m header-text\\">
    Accessibility Insights for Web
  </div>
  <GearOptionsButtonComponent dropdownClickHandler={{...}} featureFlags={{...}} />
</header>"
`;

exports[`HeaderTest render header: no feature flag store data 1`] = `
"<header className=\\"header-bar\\">
  <class_1 deps={{...}} />
  <div className=\\"ms-font-m header-text\\">
    Accessibility Insights for Web
  </div>
</header>"
`;

exports[`HeaderTest render header: tabClosed is false, new assessment experience enabled 1`] = `
"<header className=\\"header-bar\\">
  <class_1 deps={{...}} />
  <div className=\\"ms-font-m header-text\\">
    Accessibility Insights for Web
  </div>
  <Switcher deps={{...}} pivotKey={2} />
  <GearOptionsButtonComponent dropdownClickHandler={{...}} featureFlags={{...}} />
</header>"
`;

exports[`HeaderTest render header: target tabClosed is true, new assessment experience enabled 1`] = `
"<header className=\\"header-bar\\">
  <class_1 deps={{...}} />
  <div className=\\"ms-font-m header-text\\">
    Accessibility Insights for Web
  </div>
</header>"
`;
